--- a/schemas/templates/typescript/object/model.hbs
+++ b/schemas/templates/typescript/object/model.hbs
@@ -2,7 +2,7 @@
 import { {{ getType this }} } from '{{ getImportPath this }}'
 {{/each}}
 
-export class {{ getName obj }} {
+export class {{ getType obj }} {
     {{#each obj.properties}}
     {{ @key }}{{#if (propOptional ../obj @key) }}?{{/if}}: {{ getType this }};
     {{/each}}
