--- a/schemas/templates/typescript/string/model.hbs
+++ b/schemas/templates/typescript/string/model.hbs
@@ -1,1 +1,9 @@
-export type {{ getName obj }} = string
+{{#if obj.format }}
+    {{#if (inList obj.format 'date' 'date-time' 'time' )}}
+export type {{ getType obj }} = Date
+    {{ else }}
+export type {{ getType obj }} = string
+    {{/if}}
+{{ else }}
+export type {{ getType obj }} = string
+{{/if}}
