--- a/schemas/templates/typescript/string/validator.hbs
+++ b/schemas/templates/typescript/string/validator.hbs
@@ -1,6 +1,6 @@
-import { {{ getName obj }} } from './{{ getName obj }}.model'
+import { {{ getType obj }} } from './{{ getType obj }}.model'
 
-export function {{ getName obj }}Validator(item: {{ getName obj }}): string[] {
+export function {{ getType obj }}Validator(item: {{ getType obj }}): string[] {
     const output: string[] = []
 
     return output
