--- a/templates/typescript/client/src/lib/model/validation.model.njk
+++ b/templates/typescript/client/src/lib/model/validation.model.njk
@@ -1,4 +1,4 @@
-import { ValidationSchema } from 'class-validator';
+import type { ValidationSchema } from 'class-validator';
 
 export const {{ obj | idType }}ValidationSchema: ValidationSchema = {
     name: '{{ obj | idType }}Schema',
