--- a/templates/typescript/server/src/lib/model/class.model.njk
+++ b/templates/typescript/server/src/lib/model/class.model.njk
@@ -21,7 +21,7 @@ import { {{ prop | langType }} } from './{{ prop | langType }}.class'
 export class {{ obj | idType }} {
     {% for name, prop in obj.properties %}
     @JsonProperty()
-    {{ name }}{% if not isRequired(name) %}?{% endif %}: {{ prop | langType }}
+    {{ name }}{% if not isRequired(name) %}?{% endif %}: {{ prop | langType }}{% if isArray(prop) %}[] = []{% endif %}
     {% endfor %}
 }
 {% endif %}
