--- a/templates/typescript/server/src/lib/model/orm.model.njk
+++ b/templates/typescript/server/src/lib/model/orm.model.njk
@@ -1,6 +1,20 @@
 import { EntitySchema } from "typeorm";
 import { {{ obj | idType }} } from "./{{ obj | idType }}.class";
 
+{% macro field(prop) -%}
+{%- if prop.type == 'string' -%}
+    {%- if prop.format == 'date' -%}
+    date
+    {%- elif prop.format == 'date-time' -%}
+    datetime
+    {%- else -%}
+    string
+    {%- endif -%}
+{%- else -%}
+{{- prop.type -}}
+{%- endif -%}
+{% endmacro %}
+
 export const {{ obj | idType }}Entity = new EntitySchema<{{ obj | idType }}>({
     name: '{{ obj | idType }}',
     columns: {
@@ -8,8 +22,9 @@ export const {{ obj | idType }}Entity = new EntitySchema<{{ obj | idType }}>({
     {%- if not isRelation(prop) %}
         {{ name }}: {
             {% if prop.persistence.primary -%}primary: {{ prop.persistence.primary }},{%- endif %}
-            type: '{{ prop.type }}',
+            type: '{{ field(prop) }}',
             nullable: {% if isRequired(name) %}false{% else %}true{% endif %},
+            length: {% if prop.maxLength %}{{ prop.maxLength }}{% else %}100{% endif %},
         },
     {%- endif %}
     {%- endfor %}
