--- a/templates/typescript/server/src/lib/model/validation.model.njk
+++ b/templates/typescript/server/src/lib/model/validation.model.njk
@@ -5,9 +5,11 @@ export const {{ obj | idType }}ValidationSchema: ValidationSchema = {
     properties: {
     {%- for name, prop in obj.properties %}
         {{ name }}: [
-            {% if prop.maxLength %}{ type: 'maxLength', constraints: [{{ prop.maxLength }}] },{% endif %}
-            {% if prop.minLength %}{ type: 'minLength', constraints: [{{ prop.minLength }}] },{% endif %}
-            {% if prop.format == 'email' %}{ type: 'isEmail' },{% endif %}
+            {% if prop.maxLength -%}{ type: 'maxLength', constraints: [{{ prop.maxLength }}] },{%- endif %}
+            {% if prop.minLength -%}{ type: 'minLength', constraints: [{{ prop.minLength }}] },{%- endif %}
+            {% if prop.format == 'email' -%}{ type: 'isEmail' },{%- endif %}
+            {% if prop.format == 'date' -%}{ type: 'isDate' },{%- endif %}
+            
         ],
     {%- endfor %}
     }
