--- a/templates/typescript/server/src/lib/ws/handlers.operations.njk
+++ b/templates/typescript/server/src/lib/ws/handlers.operations.njk
@@ -1,5 +1,5 @@
 import { Server } from "socket.io";
-import { JsonSerializer, throwError } from 'typescript-json-serializer';
+import { instanceToPlain, plainToInstance } from 'class-transformer';
 import { getConnection } from "typeorm";
 
 
@@ -12,27 +12,24 @@ import { {{ fn.output | idType }} } from '$lib/model/{{ fn.output | idType }}.cl
 import { {{ fn.name | normalizeName }}Handler } from '$lib/handlers/{{ fn.name | normalizeName }}.handler'
 {%- endfor %}
 
-const serializer = new JsonSerializer({
-    errorCallback: throwError,
-});
-
 export function handleWs(io: Server) {
     io.on("connection", async (socket) => {
         console.log("WS connection");
-        const connection = await getConnection();
+        // const connection = await getConnection();
+        const connection = null;
 
         {%- for fn in fns %}        
         socket.on('{{ fn.input | idType }}', async (args) => {
             console.log(`received {{ fn.input | idType }} ${(args)}`);
             const response = new {{ fn.output | idType }}()
             try {
-                const request = serializer.deserialize(args, {{ fn.input | idType }}) as {{ fn.input | idType }};
+                const request = plainToInstance({{ fn.input | idType }}, args);
                 await {{ fn.name | normalizeName }}Handler(request, response, connection)
             } catch(error) {
-                response.errors.push(error)
+                response.errors.push(`${error}`)
             }
             
-            const json = serializer.serialize(response);
+            let json = JSON.stringify(instanceToPlain(response));
             io.emit('{{ fn.output | idType }}', json)
         });
         {%- endfor %}
