--- a/templates/typescript/client/src/lib/ws/handlers.operations.njk
+++ b/templates/typescript/client/src/lib/ws/handlers.operations.njk
@@ -12,10 +12,10 @@ const socket = ioClient(ENDPOINT, { secure: false });
 
 {% for fn in fns %}
 function {{ fn.name | normalizeName }}(request: {{ fn.input | idType }}) {
-    const name = {{ fn.input | idType }}.constructor.name
+    const name = {{ fn.input | idType }}.name
     const data = JSON.stringify(instanceToPlain(request));
 
-    console.log(`sending ${name}: ${data}`)
+    console.log(`sending {{ fn.input | idType }}: ${data}`)
     socket.emit(name, data)
 }
 {% endfor %}
@@ -27,7 +27,8 @@ const {{ fn.name | normalizeName | lcFirst }}Store = writable<{{ fn.output | idT
 {%- for fn in fns %}
 socket.on('{{ fn.output | idType }}', async (args) => {
     console.log(`received {{ fn.output | idType }} ${args}`);
-    const response = plainToInstance({{ fn.output | idType }}, args);
+    const json  = JSON.parse(args)
+    const response = plainToInstance({{ fn.output | idType }}, json);
     {{ fn.name | normalizeName | lcFirst }}Store.set(response)
 });
 {% endfor %}
